# TohruPhysics

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt
Bench/: CMakeLists.txt
Bench/Source/: BenchCore.cpp
Demo/: BuildDemo.sh  CMakeLists.txt
Demo/Source/: Main.cpp
Doc/Section01_CoreArchitecture/: ArenaMemory.md
Doc/Section02_ScalarMath/: ScalarMath.md
Doc/Section03_VectorMath/: Vector3.md
Doc/Section04_MatrixMath/: Matrix.md
Doc/Section05_QuaternionOrientations/: Quaternion.md
Doc/Section06_CustomArrays/: Array.md
Doc/Section07_SpatialReferenceFrames/: Transform.md
Doc/Section08_ErrorValues/: Error.md
Doc/Spec/: Cuties.md  TohruPhysicsMaid.md
Gui/: CMakeLists.txt  _Generated.slint
Gui/App/: AppMain.cpp  AppState.cpp  AppState.h  HeadlessMain.cpp
Gui/Controls/: CameraPanel.slint  CameraPanelBridge.cpp  PhysicsPanel.slint  PhysicsPanelBridge.cpp  SimControls.slint  SimControlsBridge.cpp  StatsPanel.slint  StatsPanelBridge.cpp
Gui/Demo/: CharacterDemo.cpp  ConstraintsDemo.cpp  ConstraintsDemo.h  DemoLauncher.slint  DemoLauncherBridge.cpp  DemoLauncherBridge.h  DestructionDemo.cpp  FluidDemo.cpp  FluidDemo.h  MultiPhysicsDemo.cpp  ParticleDemo.cpp  ParticleDemo.h  RemainingDemos.h  RigidStackDemo.cpp  RigidStackDemo.h  ScientificDemo.cpp  ScientificDemo.h  SoftBodyDemo.cpp  SoftBodyDemo.h  VehicleDemo.cpp  WaterSimDemo.cpp  WaterSimDemo.h
Gui/Inspector/: BodyInspector.slint  InspectorBridge.cpp  InspectorBridge.h
Gui/Notification/: ToastBridge.cpp  ToastBridge.h  ToastSystem.slint
Gui/Perf/: PerfBridge.cpp  PerfBridge.h  PerfOverlay.slint
Gui/Record/: SimRecorder.cpp  SimRecorder.h
Gui/Scene/: SceneJson.cpp  SceneJson.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h
Gui/Theme/: Icons.slint  Tokens.slint
Gui/Third/glad/: glad.c  glad.h
Gui/Viewport/: DebugRenderer.cpp  DebugRenderer.h  GlPipeline.cpp  GlPipeline.h  GridRenderer.cpp  GridRenderer.h  ViewportHost.cpp  ViewportHost.h
Gui/Viewport/Shaders/: Body.frag  Body.vert  Debug.frag  Debug.vert  Grid.frag  Grid.vert  Particle.frag  Particle.vert
Gui/Window/: MainWindow.slint  MainWindowBridge.cpp  MainWindowBridge.h
Gui/i18n/: En.h  Ja.h  StringTable.cpp  StringTable.h
Include/TohruPhysics/: Arena.h  Array.h  BVH.h  BodyState.h  BroadPhase.h  ContactManifold.h  Error.h  GJK.h  Geometry.h  Integrator.h  Island.h  Log.h  Math.h  Matrix.h  NoHeap.h  Quaternion.h  SAP.h  SAT.h  SpatialGrid.h  ThreadPool.h  Transform.h  Vector3.h
Scripts/: RunBenchmarks.sh  RunSanitizers.sh  RunTests.sh
Source/: CMakeLists.txt
Source/Arena/: Arena.cpp
Source/Array/: Array.cpp
Source/BVH/: BVH.cpp
Source/BodyState/: BodyState.cpp
Source/BroadPhase/: BroadPhase.cpp
Source/Collision/: ContactManifold.cpp
Source/Error/: Error.cpp
Source/GJK/: GJK.cpp
Source/Geometry/: Geometry.cpp
Source/Integrator/: Integrator.cpp
Source/Island/: Island.cpp
Source/Log/: Log.cpp
Source/Math/: Math.cpp
Source/Matrix/: Matrix.cpp
Source/Quaternion/: Quaternion.cpp
Source/SAP/: SAP.cpp
Source/SAT/: SAT.cpp
Source/SpatialGrid/: SpatialGrid.cpp
Source/ThreadPool/: ThreadPool.cpp
Source/Transform/: Transform.cpp
Source/Vector3/: Vector3.cpp
Test/: CMakeLists.txt  RunTests.sh
Test/Source/: TestArena.cpp  TestArray.cpp  TestAssert.h  TestBVH.cpp  TestBodyState.cpp  TestBroadPhase.cpp  TestContactManifold.cpp  TestError.cpp  TestGJK.cpp  TestGeometry.cpp  TestIntegrator.cpp  TestIsland.cpp  TestLog.cpp  TestMath.cpp  TestMatrix.cpp  TestQuaternion.cpp  TestSAP.cpp  TestSAT.cpp  TestSpatialGrid.cpp  TestThreadPool.cpp  TestThreadPoolMini.cpp  TestTransform.cpp  TestVector3.cpp
